update hyprland.conf to have my most used keybinds

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -128,6 +128,14 @@ input {
 }
 
 # Window management with vim keys
+unbind = $mainMod, H
+unbind = $mainMod, J
+unbind = $mainMod, K
+unbind = $mainMod, L
+
+bindd = $mainMod, space, $d application finder , exec, pkill -x rofi || $rofi-launch d
+bindd = $mainMod, return, $d terminal emulator , exec, $TERMINAL
+
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
