add lock and close window commands

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -132,9 +132,12 @@ unbind = $mainMod, H
 unbind = $mainMod, J
 unbind = $mainMod, K
 unbind = $mainMod, L
+unbind = $mainMod, W
 
 bindd = $mainMod, space, $d application finder , exec, pkill -x rofi || $rofi-launch d
 bindd = $mainMod, return, $d terminal emulator , exec, $TERMINAL
+bindd = $mainMod, W, $d close focused window, exec, $scrPath/dontkillsteam.sh
+bindd = $mainMod_ALT, L, $d lock screen, exec, lockscreen.sh
 
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
