--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -117,9 +117,9 @@ source = ./userprefs.conf # Personal hyprland configuration
 # bind = Ctrl+Alt_L, V, submap, reset
 # submap = reset
 
-monitor=eDP-1,preferred,auto,1.333333
+monitor=eDP-1,1920x1080,auto,1.2
 monitor=HDMI-A-1,preferred,auto,1
-workspace=3,HDMI-A-1
+# workspace=3,HDMI-A-1
 
 input {
   kb_options = ctrl:swapcaps
