--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -85,8 +85,8 @@ source = ./userprefs.conf # Personal hyprland configuration
 # bind = Ctrl+Alt+Shift, R, pass, ^(com\.obsproject\.Studio)$ # toggle obs screen recording // install obs flatpak
 # bind = $mainMod+Shift, G, exec, pkill -x rofi || $scrPath/gamelauncher.sh # launch steam game launcher // install steam
 # bind = $mainMod, Period, exec, emote # launch emoji selector // install emote
-# bind = $mainMod+Alt, XF86MonBrightnessDown, exec, hyprshade on blue-light-filter # enable blue light filter // install hyprshade
-# bind = $mainMod+Alt, XF86MonBrightnessUp, exec, hyprshade off # disable blue light filter // install hyprshade
+bind = $mainMod+Alt, XF86MonBrightnessDown, exec, hyprshade on blue-light-filter # enable blue light filter // install hyprshade
+bind = $mainMod+Alt, XF86MonBrightnessUp, exec, hyprshade off # disable blue light filter // install hyprshade
 
 
 # // █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
@@ -119,7 +119,6 @@ source = ./userprefs.conf # Personal hyprland configuration
 
 monitor=eDP-1,1920x1080,auto,1.2
 monitor=HDMI-A-1,preferred,auto,1
-# workspace=3,HDMI-A-1
 
 input {
   kb_options = ctrl:swapcaps
@@ -152,8 +151,7 @@ bind = $mainMod_CTRL, l, resizeactive, 25 0
 bind = $mainMod_CTRL, k, resizeactive, 0 -25
 bind = $mainMod_CTRL, j, resizeactive, 0 25
 
-bind = ALT, XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = ALT, XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = ALT, XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = $mainMod, XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = $mainMod, XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = $mainMod, f, fullscreen
 bind = $mainMod, m, fullscreen, 1
