potentially fix waybar crashing

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -155,3 +155,6 @@ bind = $mainMod, XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK
 bind = $mainMod, XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = $mainMod, f, fullscreen
 bind = $mainMod, m, fullscreen, 1
+
+# Potential waybar crash fix
+cursor:no_warps = true
