update hyprshade command

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -85,8 +85,8 @@ source = ./userprefs.conf # Personal hyprland configuration
 # bind = Ctrl+Alt+Shift, R, pass, ^(com\.obsproject\.Studio)$ # toggle obs screen recording // install obs flatpak
 # bind = $mainMod+Shift, G, exec, pkill -x rofi || $scrPath/gamelauncher.sh # launch steam game launcher // install steam
 # bind = $mainMod, Period, exec, emote # launch emoji selector // install emote
-bind = $mainMod+Alt, XF86MonBrightnessDown, exec, hyprshade on blue-light-filter # enable blue light filter // install hyprshade
-bind = $mainMod+Alt, XF86MonBrightnessUp, exec, hyprshade off # disable blue light filter // install hyprshade
+bind = $mainMod, XF86MonBrightnessDown, exec, hyprshade on blue-light-filter # enable blue light filter // install hyprshade
+bind = $mainMod, XF86MonBrightnessUp, exec, hyprshade off # disable blue light filter // install hyprshade
 
 
 # // █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
