--- a/dot_config/hypr/userprefs.conf
+++ b/dot_config/hypr/userprefs.conf
@@ -19,11 +19,13 @@ unbind = $mainMod, J
 unbind = $mainMod, K
 unbind = $mainMod, L
 unbind = $mainMod, W
+unbind = $mainMod, Q
 
 bindd = $mainMod, space, $d application finder , exec, pkill -x rofi || $rofi-launch d
 bindd = $mainMod, return, $d terminal emulator , exec, $TERMINAL
 bindd = $mainMod, W, $d close focused window, exec, $scrPath/dontkillsteam.sh
 bindd = $mainMod_ALT, L, $d lock screen, exec, lockscreen.sh
+bindd = $mainMod, Q, $d toggle waybar and reload config, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh)
 
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
