add warp term launch command

--- a/dot_config/hypr/userprefs.conf
+++ b/dot_config/hypr/userprefs.conf
@@ -15,12 +15,14 @@ input {
 
 # Window management with vim keys
 unbind = $mainMod, H
+unbind = $mainMod, T
 unbind = $mainMod, J
 unbind = $mainMod, K
 unbind = $mainMod, L
 unbind = $mainMod, W
 unbind = $mainMod, Q
 
+bindd = $mainMod, T, $d warp terminal, exec, warp-terminal
 bindd = $mainMod, space, $d application finder , exec, pkill -x rofi || $rofi-launch d
 bindd = $mainMod, return, $d terminal emulator , exec, $TERMINAL
 bindd = $mainMod, W, $d close focused window, exec, $scrPath/dontkillsteam.sh
