add toggle floating keybind

--- a/dot_config/hypr/userprefs.conf
+++ b/dot_config/hypr/userprefs.conf
@@ -27,6 +27,7 @@ bindd = $mainMod, space, $d application finder , exec, pkill -x rofi || $rofi-la
 bindd = $mainMod, return, $d terminal emulator , exec, $TERMINAL
 bindd = $mainMod, W, $d close focused window, exec, $scrPath/dontkillsteam.sh
 bindd = $mainMod_ALT, L, $d lock screen, exec, lockscreen.sh
+bind = $mainMod_CTRL, F, togglefloating
 bindd = $mainMod, Q, $d toggle waybar and reload config, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh)
 
 bind = $mainMod, h, movefocus, l
