add keybind descriptors and fix alias for pac

--- a/dot_config/hypr/userprefs.conf
+++ b/dot_config/hypr/userprefs.conf
@@ -27,26 +27,26 @@ bindd = $mainMod, space, $d application finder , exec, pkill -x rofi || $rofi-la
 bindd = $mainMod, return, $d terminal emulator , exec, $TERMINAL
 bindd = $mainMod, W, $d close focused window, exec, $scrPath/dontkillsteam.sh
 bindd = $mainMod_ALT, L, $d lock screen, exec, lockscreen.sh
-bind = $mainMod_CTRL, F, togglefloating
+bindd = $mainMod_CTRL, F, $d toggle floating mode, togglefloating
 bindd = $mainMod, Q, $d toggle waybar and reload config, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh)
 
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
-bind = $mainMod_SHIFT, h, movewindow, l
-bind = $mainMod_SHIFT, l, movewindow, r
-bind = $mainMod_SHIFT, k, movewindow, u
-bind = $mainMod_SHIFT, j, movewindow, d
-bind = $mainMod_CTRL, h, resizeactive, -25 0
-bind = $mainMod_CTRL, l, resizeactive, 25 0
-bind = $mainMod_CTRL, k, resizeactive, 0 -25
-bind = $mainMod_CTRL, j, resizeactive, 0 25
+bindd = $mainMod, h, $d focus left, movefocus, l
+bindd = $mainMod, l, $d focus right, movefocus, r
+bindd = $mainMod, k, $d focus up, movefocus, u
+bindd = $mainMod, j, $d focus down, movefocus, d
+bindd = $mainMod_SHIFT, h, $d move window left, movewindow, l
+bindd = $mainMod_SHIFT, l, $d move window right, movewindow, r
+bindd = $mainMod_SHIFT, k, $d move window up, movewindow, u
+bindd = $mainMod_SHIFT, j, $d move window down, movewindow, d
+bindd = $mainMod_CTRL, h, $d resize window left, resizeactive, -25 0
+bindd = $mainMod_CTRL, l, $d resize window right, resizeactive, 25 0
+bindd = $mainMod_CTRL, k, $d resize window up, resizeactive, 0 -25
+bindd = $mainMod_CTRL, j, $d resize window down, resizeactive, 0 25
 
-bind = $mainMod, XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = $mainMod, XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = $mainMod, f, fullscreen
-bind = $mainMod, m, fullscreen, 1
+bindd = $mainMod, XF86AudioRaiseVolume, $d increase volume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindd = $mainMod, XF86AudioLowerVolume, $d decrease volume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindd = $mainMod, f, $d toggle fullscreen, fullscreen
+bindd = $mainMod, m, $d force fullscreen, fullscreen, 1
 
 bind = $mainMod, XF86MonBrightnessDown, exec, hyprshade on blue-light-filter # enable blue light filter // install hyprshade
 bind = $mainMod, XF86MonBrightnessUp, exec, hyprshade off # disable blue light filter // install hyprshade
