--- a/dot_config/hypr/userprefs.conf
+++ b/dot_config/hypr/userprefs.conf
@@ -6,6 +6,7 @@
 
 monitor=eDP-1,1920x1080,auto,1.2
 monitor=HDMI-A-1,preferred,auto,1
+exec-once = protonvpn-app
 
 input {
   kb_options = ctrl:swapcaps
