add bindings commentary

--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -19,8 +19,10 @@ bindd = SUPER SHIFT, SLASH, Passwords, exec, uwsm-app -- 1password
 bindd = SUPER SHIFT ALT, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
 bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
 bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
-bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://mail.proton.me"
 bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
+
+# My modified and added keybinds
+bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://mail.proton.me"
 bindd = SUPER SHIFT, M, YMusic, exec, omarchy-launch-webapp "https:///music.youtube.com"
 bindd = SUPER SHIFT, O, Notesnook, exec, omarchy-launch-webapp "https://app.notesnook.com/notes"
 bindd = SUPER SHIFT, L, Leetcode, exec, omarchy-launch-webapp "https://leetcode.com/problemset"
@@ -28,10 +30,12 @@ bindd = SUPER SHIFT ALT, L, AlgoMonster, exec, omarchy-launch-webapp "https://al
 bindd = SUPER SHIFT, R, Rive, exec, omarchy-launch-webapp "https://rivestream.org"
 bindd = SUPER SHIFT, K, Keybr, exec, omarchy-launch-webapp "https://keybr.com"
 bindd = SUPER SHIFT, G, UltimateGuitar, exec, omarchy-launch-webapp "https://www.ultimate-guitar.com/"
+bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/bcbacker"
+# My modified and added keybinds
+
 bindd = SUPER SHIFT ALT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
 bindd = SUPER SHIFT CTRL, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
 bindd = SUPER SHIFT, P, Google Photos, exec, omarchy-launch-or-focus-webapp "Google Photos" "https://photos.google.com/"
-bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/bcbacker"
 bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
