keybinds update with quickbooks

--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -1,8 +1,8 @@
 # Application bindings
-$terminal = uwsm-app -- $TERMINAL
+$terminal = uwsm-app -- xdg-terminal-exec
 $browser = omarchy-launch-browser
 
-bindd = SUPER, RETURN, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
+bindd = SUPER, RETURN, Terminal, exec, $terminal --dir="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER SHIFT, F, File manager, exec, uwsm-app -- nautilus --new-window
 bindd = SUPER SHIFT, B, Browser, exec, $browser
 bindd = SUPER SHIFT ALT, B, Browser (private), exec, $browser --private
@@ -30,6 +30,7 @@ bindd = SUPER SHIFT ALT, L, AlgoMonster, exec, omarchy-launch-webapp "https://al
 bindd = SUPER SHIFT, R, Rive, exec, omarchy-launch-webapp "https://rivestream.org"
 bindd = SUPER SHIFT, K, Keybr, exec, omarchy-launch-webapp "https://keybr.com"
 bindd = SUPER SHIFT, G, UltimateGuitar, exec, omarchy-launch-webapp "https://www.ultimate-guitar.com/"
+bindd = SUPER SHIFT, Q, QuickbooksAcademy, exec, omarchy-launch-webapp "https://proadvisoracademy.app.intuit.com/home"
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/bcbacker"
 # My modified and added keybinds
 
