swap leetcode and algomonster keybinds

--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -25,8 +25,8 @@ bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.co
 bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://mail.proton.me"
 bindd = SUPER SHIFT, M, YMusic, exec, omarchy-launch-webapp "https:///music.youtube.com"
 bindd = SUPER SHIFT, O, Notesnook, exec, omarchy-launch-webapp "https://app.notesnook.com/notes"
-bindd = SUPER SHIFT, L, Leetcode, exec, omarchy-launch-webapp "https://leetcode.com/problemset"
-bindd = SUPER SHIFT ALT, L, AlgoMonster, exec, omarchy-launch-webapp "https://algo.monster/dashboard"
+bindd = SUPER SHIFT ALT, L, Leetcode, exec, omarchy-launch-webapp "https://leetcode.com/problemset"
+bindd = SUPER SHIFT, L, AlgoMonster, exec, omarchy-launch-webapp "https://algo.monster/dashboard"
 bindd = SUPER SHIFT, R, Rive, exec, omarchy-launch-webapp "https://rivestream.org"
 bindd = SUPER SHIFT, K, Keybr, exec, omarchy-launch-webapp "https://keybr.com"
 bindd = SUPER SHIFT, G, UltimateGuitar, exec, omarchy-launch-webapp "https://www.ultimate-guitar.com/"
