add khan academy keybind

--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -28,7 +28,8 @@ bindd = SUPER SHIFT, O, Notesnook, exec, omarchy-launch-webapp "https://app.note
 bindd = SUPER SHIFT ALT, L, Leetcode, exec, omarchy-launch-webapp "https://leetcode.com/problemset"
 bindd = SUPER SHIFT, L, AlgoMonster, exec, omarchy-launch-webapp "https://algo.monster/dashboard"
 bindd = SUPER SHIFT, R, Rive, exec, omarchy-launch-webapp "https://rivestream.org"
-bindd = SUPER SHIFT, K, Keybr, exec, omarchy-launch-webapp "https://keybr.com"
+bindd = SUPER SHIFT, K, KhanAcademy, exec, omarchy-launch-webapp "https://khanacademy.org"
+bindd = SUPER SHIFT ALT, K, Keybr, exec, omarchy-launch-webapp "https://keybr.com"
 bindd = SUPER SHIFT, G, UltimateGuitar, exec, omarchy-launch-webapp "https://www.ultimate-guitar.com/"
 bindd = SUPER SHIFT, Q, QuickbooksAcademy, exec, omarchy-launch-webapp "https://proadvisoracademy.app.intuit.com/home"
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/bcbacker"
